--- a/02-Python-for-Data-Analysis-NumPy/04-Numpy Exercises.ipynb
+++ b/02-Python-for-Data-Analysis-NumPy/04-Numpy Exercises.ipynb
@@ -415,28 +415,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[12, 13, 14, 15],\n",
-       "       [17, 18, 19, 20],\n",
-       "       [23, 24, 25, 26]])"
+       "       [16, 17, 18, 19],\n",
+       "       [20, 21, 22, 23]])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mat1 = np.arange(12,24).reshape(3,4)\n",
+    "mat1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12, 13, 14, 15],\n",
+       "       [18, 19, 20, 21],\n",
+       "       [25, 26, 27, 28]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "for n in range(3):\n",
-    "    mat1[n:,] = mat1[n:,] + n\n",
+    "    mat1[n,] = mat1[n,] + n\n",
     "mat1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
