--- a/02-Python-for-Data-Analysis-NumPy/04-Numpy Exercises.ipynb
+++ b/02-Python-for-Data-Analysis-NumPy/04-Numpy Exercises.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -168,14 +168,14 @@
        "       44, 46, 48, 50])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bool_even = arr % 2 == 0\n",
-    "arr[bool_even]"
+    "arr = np.arange(10,51,2)\n",
+    "arr"
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -198,13 +198,13 @@
        "       [6, 7, 8]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr = np.arange(0,9).reshape(3,3)\n",
+    "arr = np.arange(9).reshape(3,3)\n",
     "arr"
    ]
   },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -228,13 +228,13 @@
        "       [0., 0., 1.]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr = np.identity(3)\n",
+    "arr = np.eye(3)\n",
     "arr"
    ]
   },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "       [21, 22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,75 +415,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[12, 13, 14, 15],\n",
-       "       [16, 17, 18, 19],\n",
-       "       [20, 21, 22, 23]])"
+       "       [17, 18, 19, 20],\n",
+       "       [22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat1 = np.arange(12,24).reshape(3,4)\n",
-    "mat1"
+    "mat[2:,1:]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[12, 13, 14, 15],\n",
-       "       [18, 19, 20, 21],\n",
-       "       [25, 26, 27, 28]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for n in range(3):\n",
-    "    mat1[n,] = mat1[n,] + n\n",
-    "mat1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -503,18 +457,18 @@
        "20"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat1[1,3]"
+    "mat[3,4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -536,19 +490,18 @@
        "       [12]])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mat2 = np.arange(2,13,5).reshape(3,1)\n",
-    "mat2"
+    "mat[0:3, 1:2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -568,19 +521,18 @@
        "array([21, 22, 23, 24, 25])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr = np.arange(21,26)\n",
-    "arr"
+    "mat[4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -601,14 +553,13 @@
        "       [21, 22, 23, 24, 25]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr = np.arange(16,26).reshape(2,5)\n",
-    "arr"
+    "mat[3:,:]"
    ]
   },
   {
@@ -627,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +587,7 @@
        "325"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +614,7 @@
        "7.211102550927978"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +641,7 @@
        "array([55, 60, 65, 70, 75])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
